# SaveReminder2

./: Cargo.toml  README.md  build.rs
src/: main.rs  widgets.rs
src/widgets/: timer_widget.rs
