[package]
name = "save_reminder"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#![windows_subsystem = "windows"]

[dependencies]
druid = { git = "https://github.com/linebender/druid" }
druid-shell = { git = "https://github.com/linebender/druid" }
soloud = "0.4.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"