[package]
name = "save_reminder"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#![windows_subsystem = "windows"]

[dependencies]
druid = { git = "https://github.com/playmer/druid", branch = "raw-win-handle", features = ["raw-win-handle"] }
druid-shell = { git = "https://github.com/playmer/druid", branch = "raw-win-handle", features = ["raw-win-handle"] }
raw-window-handle = { version = "0.3.3", optional = true, default_features = false }
soloud = "0.4.0"
windows = "0.17.2"

[build-dependencies]
windows = "0.17.2"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"